# MLOps02476

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  requirements_tests.txt  train_profile.txt
.dvc/: config
.github/workflows/: cml.yml  codecheck.yml  test.yml
dockerfiles/: predict.dockerfile  trainer.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_yf/: .coveragerc  __init__.py  lightning.py  my_logger.py  parse_profile.py  predict_model.py  torch_profiler.py  train_cml.py  train_model.py  train_model_argparser.py  train_model_lightning.py  wandb_tester.py
mlops_yf/config/: model_conf.yaml  train_conf.yaml
mlops_yf/data/: make_dataset.py
mlops_yf/models/: model.py  model_lightning.py
mlops_yf/visualizations/: visualize.py
models/: trained_model.pt
outputs/2024-01-04/16-51-13/.hydra/: hydra.yaml
outputs/2024-01-05/16-23-44/.hydra/: hydra.yaml
outputs/2024-01-05/16-24-44/.hydra/: hydra.yaml
outputs/2024-01-05/16-25-46/.hydra/: hydra.yaml
outputs/2024-01-05/16-27-48/.hydra/: hydra.yaml
outputs/2024-01-05/16-34-51/.hydra/: hydra.yaml
outputs/2024-01-05/17-48-33/.hydra/: hydra.yaml
outputs/2024-01-05/17-48-33/wandb/: latest-run
outputs/2024-01-05/17-49-46/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-05/17-49-46/wandb/: latest-run
outputs/2024-01-05/17-50-58/.hydra/: hydra.yaml
outputs/2024-01-05/17-50-58/wandb/: latest-run
tests/: __init__.py  test_class.py  test_data.py  test_model.py  test_sample.py
(+24 files in other folders)
